command to run tests in container

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -29,4 +29,4 @@ COPY . .
 CMD ["ng","serve","--host", "0.0.0.0"]
 
 # running tests - replace below command as default docker CMD and test
-# ng test --browsers ChromeHeadlessNoSandbox --watch=false
+# RUN npm run test -- --browsers ChromeHeadlessNoSandbox --watch=false
