--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ jobs:
       - docker push $IMAGE_NAME
       - docker push $TEST_IMAGE_NAME
     - stage: deploy_to_test_environment
+      script: skip
       before_deploy:
       - npm install netlify-cli -g
       - npm run build -- --configuration=test
