--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ cache:
   - "./node_modules"
 install:
 - npm install
+- ./node_modules/protractor/bin/webdriver-manager update --versions.chrome 2.35
 jobs:
   include:
     - stage: unit_tests
